<resources>
    <string name="app_name">RuPasswords</string>
    <string name="activity_title">Русские пароли</string>

    <string name="enter_password">Здесь вы можете посмотреть свой пароль, созданный по методу «русское слово в английской раскладке»</string>
    <string name="enter_password_hint">(русский пароль)</string>

    <string name="generate_password">Сгенерируйте новый пароль ему на замену</string>

    <string name="password_strength">Сила этого пароля:</string>

    <string name="check_use_caps">Заглавные</string>
    <string name="check_use_digits">Цифры</string>
    <string name="check_use_symbols">Спецсимволы</string>
    <string name="button_generate">Генерировать</string>

    <string name="clip_title">Пароль</string>

    <string name="length_format">Длина: 8 + %1$d %2$s = %3$d %4$s</string>
    <string name="generated_tag">generated</string>
    <string name="translated_tag">translated</string>

    <plurals name="symbols_count">
        <item quantity="one">символ</item>
        <item quantity="two">символа</item>
        <item quantity="few">символа</item>
        <item quantity="many">символов</item>
        <item quantity="other">символов</item>
    </plurals>

    <string-array name="strengths">
        <item>(сила пароля)</item>
        <item>Ужасный</item>
        <item>Очень плохой</item>
        <item>Плохой</item>
        <item>Слабый</item>
        <item>Слабоватый</item>
        <item>Нормальный</item>
        <item>Лучше среднего</item>
        <item>Хороший</item>
        <item>Очень хороший</item>
        <item>Отличный</item>
    </string-array>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>ё</item>
    </string-array>

    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>`</item>
    </string-array>

</resources>
